--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 	"dependencies": {
 		"apify": "^0.15.2",
 		"normalize-url": "^4.5.0",
+		"p-map": "^3.0.0",
+		"ramda": "^0.26.1",
 		"request-promise": "^4.2.4"
 	},
 	"devDependencies": {},
