--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-	"name": "apify-actor-url-redirect",
-	"version": "1.0.0",
-	"description": "Actor that takes a list of URLs and provides loaded URLs",
-	"dependencies": {
-		"apify": "^0.15.2",
-		"normalize-url": "^4.5.0",
-		"p-map": "^3.0.0",
-		"ramda": "^0.26.1",
-		"request-promise": "^4.2.4"
-	},
-	"devDependencies": {},
-	"scripts": {
-		"start": "node main.js",
-		"test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1"
-	},
-	"author": "It's not you it's me",
-	"license": "MIT"
+  "name": "apify-actor-url-redirect",
+  "version": "2.0.0",
+  "description": "Actor that takes a list of URLs and provides loaded URLs",
+  "dependencies": {
+    "apify": "^1.0.0",
+    "normalize-url": "^4.5.0",
+    "puppeteer": "^5.5.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "node main.js",
+    "test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1"
+  },
+  "author": "@manishrc",
+  "license": "MIT"
 }
