--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "apify": "^3.0.2",
     "crawlee": "^3.0.4",
     "normalize-url": "^7.2.0",
-    "playwright": "^1.26.1",
-    "puppeteer": "^18.0.5"
+    "playwright": "^1.26.1"
   },
   "devDependencies": {},
   "scripts": {
